# mp4restorer

./: README.md  setup.cfg
src/: main.py
src/flaskapp/: app.py
src/flaskapp/static/css/: style.css
src/flaskapp/templates/: base.html  index.html
src/restorer/: invalid.py  recorder.py  restored.py
src/restorer/atom/: atom.py  avcc.py  dref.py  ftyp.py  hdlr.py  mdat.py  mdhd.py  mvhd.py  stco.py  stsc.py  stsd.py  stss.py  stsz.py  stts.py  tkhd.py  vmhd.py
src/test/atom/: test_atom.py
