[metadata]
name = mp4restorer
version = 0.0.3
author = mkh
author_email = m.khomutov@list.ru
description = Verifies dumped mp4 file. Restores if invalid (has no metadata or is multisliced and generated incorrectly).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-khomutov/mp4restorer
project_urls =
    Bug Tracker = https://github.com/m-khomutov/mp4restorer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mp4restore = restorer.restored:restore
